--- a/html-css/freeCodeCamp_coloredMarkersSet/css/style.css
+++ b/html-css/freeCodeCamp_coloredMarkersSet/css/style.css
@@ -9,15 +9,18 @@ h1 {
 }
 
 .red{
-  background-color: rgb(255, 0, 0);
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113) , rgb(162, 27, 27));
+  box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
 }
 
 .green{
-  background-color: #007F00; 
+  background: linear-gradient(#55680D, #71F53E, #116C31); 
+  box-shadow: 0 0 20px 0 #3B7E20CC;
 }
 
 .blue{
-  background-color: rgb(0, 0, 255);
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+  box-shadow: 0 0 20px 0 blue;
 }
 
 .container {
@@ -26,4 +29,20 @@ h1 {
   padding-bottom: 10px;
   padding-left: 0;
   padding-right: 0;
+}
+
+.sleeve {
+  width: 110px;
+  height: 25px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-left: 10px double rgba(0, 0, 0, 0.75);
+}
+
+.cap {
+  width: 60px;
+  height: 25px;
+}
+
+.cap, .sleeve {
+  display: inline-block;
 }
